@@ -1,6 +1,5 @@
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Main {
@@ -10,13 +9,12 @@ public class Main {
         Stream<Integer> st1 = list.stream().map(x -> x * 10);
         System.out.println(Arrays.toString(st1.toArray()));
 
-        int sum = list.stream().reduce(0, (x, y) -> x + y);
+        int sum = list.stream().reduce(0, Integer::sum);
         System.out.println("Sum = " + sum);
 
         List<Integer> newList = list.stream()
                 .filter(x -> x % 2 == 0)
-                .map(x -> x * 10)
-                .collect(Collectors.toList());
+                .map(x -> x * 10).toList();
         System.out.println(Arrays.toString(newList.toArray()));
     }
 }
